# django_shop

./: .djlintrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  QWEN.md  logging_config.py  manage.py  pyproject.toml  pytest.ini
app/: settings.py  urls.py
carts/: admin.py  mixins.py  models.py  urls.py  utils.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cart_table.py  0003_alter_cart_user.py
carts/templates/carts/includes/: included_cart.html
carts/templatetags/: carts_tags.py
fixtures/goods/: categories.json  products.json
goods/: admin.py  models.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_name_and_more.py  0002_alter_product_options_alter_product_description.py
goods/templates/goods/: catalog.html  product.html
goods/templatetags/: goods_tags.py
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
orders/: admin.py  forms.py  models.py  services.py  views.py
orders/migrations/: 0001_initial.py  0002_order_user_order_no.py
orders/templates/orders/: create_order.html
templates/: base.html
templates/includes/: cart_button.html  notifications.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone_number.py  0003_user_total_orders.py
users/templates/users/: login.html  profile.html  registration.html  users_cart.html
