[project]
name = "django-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-debug-toolbar>=6.1.0",
    "djlint>=1.36.4",
    "ipython>=9.7.0",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "pre-commit>=4.3.0",
]
